# std_algo

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  build.sh  cmake_uninstall.cmake.in  install.sh  mergeSort.cpp  test-merge  uninstall.sh
include/: my_sorting.h
include/std_algo/: sort.h
src/: my_sorting.cpp  sort.cpp  test_sorting.cpp
